--- a/website/newsletter/190/index.mdx
+++ b/website/newsletter/190/index.mdx
@@ -1,18 +1,20 @@
 ---
 slug: /190
 title: "This Week In React #190: Suspense, Internals Explorer, DevTools, RSC + Vite, Codemod, Astro, INP, composition, Reassure, Fumadocs, tscircuit, Sonner, Relay, Reanimated, RNGH, BottomSheet, RNScreens, VisionOS, TC39, Node, CSS ..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 06-19-2024
 ---
 
 Hi everyone!
 
-This week I (Seb) am back from my break, and happy to share that the newsletter crossed 40 000 subscribers! 🎉 \
-Thank you all for your support and for sharing the newsletter with your friends and colleagues. If you have any idea to make it even better, just hit reply to this email.
+I (Seb) am back, and happy to share that the newsletter crossed **40 000 subscribers**! 🎉
 
-The React 19 stable released that we expected very soon is delayed a bit by a controversial Suspense behavior change.
+Thanks for your support and for sharing the newsletter with your friends.\
+Any idea to make it even better, share a feedback or submit a link? Just reply to this email!
 
-On the React Native side, the first RC of 0.75 is expected very soon and should use React 19.
+This week the React 19 stable released that we expected very soon is delayed a bit due to a controversial change in how Suspense behave.
+
+On the React Native side, the first RC of 0.75 is expected very soon, running under React 19.
 
 <!-- truncate -->
 
