--- a/website/newsletter/190/index.mdx
+++ b/website/newsletter/190/index.mdx
@@ -10,15 +10,13 @@ Hi everyone!
 I (Seb) am back, and happy to share that the newsletter crossed **40 000 subscribers**! 🎉
 
 Thanks for your support and for sharing the newsletter with your friends.\
-Any idea to make it even better, share a feedback or submit a link? Just reply to this email!
+Any idea to make it even better, share feedback, or submit a link? Just reply to this email!
 
-This week the React 19 stable released that we expected very soon is delayed a bit due to a controversial change in how Suspense behave.
+This week the React 19 stable release that we expected very soon is delayed a bit due to a controversial change in how Suspense behaves.
 
 On the React Native side, the first RC of 0.75 is expected very soon, running under React 19.
 
 <!-- truncate -->
-
-**💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
 
 ---
 
