--- a/website/newsletter/191/index.mdx
+++ b/website/newsletter/191/index.mdx
@@ -7,7 +7,7 @@ date: 06-26-2024
 
 Hi everyone!
 
-This week it looks like we finally entered the summer/holiday season and the pace of major React announcements is slowing down. We will also be taking a short summer break, skip 2 issues, and be back on July 17.
+This week it looks like we are finally entering the summer/holiday season and the pace of major React announcements is slowing down. We will also be taking a short summer break, skip 2 issues, and be back on July 17.
 
 On the React side, we continue to have interesting content related to the Suspense drama from last week. A new React Router feature permits you to code split your route tree.
 
