--- a/website/newsletter/191/index.mdx
+++ b/website/newsletter/191/index.mdx
@@ -120,6 +120,7 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 - 🐦 [Marc Rousavy on how to get relevant log or crash information in RN for creating issues in open source libs](https://x.com/mrousavy/status/1805637303726973437)
 - 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Get a 10% discount with code "TWIR". Mo Khazali — Head of Mobile at Theodo UK, Matteo Collina — CTO of Platformatic.dev, and Siddharth Kshetrapal —Staff software engineer at GitHub, will speak !
 - 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - 🇺🇸 Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
+- 👀 [Revert "Make the New Architecture the default"](https://github.com/facebook/react-native/commit/37e8fa113ef6a8be7cd057b2bf6ffaa4ae6439d9): it looks like turning the New Arch on by default might be postponed and will finally not be part of v0.75?
 - 👀 [Shopify FlashList PR - New architecture support merged (but not released yet)](https://github.com/Shopify/flash-list/pull/550)
 - 👀 [Fishjam Cloud - New project by Software Mansion to bring video streaming to React Native](https://cloud.fishjam.stream/)
 - 👀 [expo-router-native-intent-demo - Using +native-intent API in Expo Router to support "Copy to app" functionality on iOS](https://github.com/EvanBacon/expo-router-native-intent-demo)
