--- a/website/newsletter/191/index.mdx
+++ b/website/newsletter/191/index.mdx
@@ -124,7 +124,7 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 - 👀 [Shopify FlashList PR - New architecture support merged (but not released yet)](https://github.com/Shopify/flash-list/pull/550)
 - 👀 [Fishjam Cloud - New project by Software Mansion to bring video streaming to React Native](https://cloud.fishjam.stream/)
 - 👀 [expo-router-native-intent-demo - Using +native-intent API in Expo Router to support "Copy to app" functionality on iOS](https://github.com/EvanBacon/expo-router-native-intent-demo)
-- 📜 [Client guide to React Native modules](https://ospfranco.com/client-guide-to-react-native-modules/): Oscar explains the differences, pros, and cons of the different ways to expose native modules to React Native, and helps us choose the best solution depending on context.
+- 📜 [Client guide to React Native modules](https://ospfranco.com/client-guide-to-react-native-modules/): Oscar greatly explains the differences, pros, and cons of the different ways to expose native modules to React Native, and helps us choose the best solution depending on context.
 - 📜 [Bridging React Native and Rust via JSI](https://ditto.live/blog/bridging-react-native-and-rust-via-jsi): An article by Ditto, a data sync engine written in Rust, on how they bridged their core logic (in Rust) to RN via JSI.
 - 📜 [On-device AI/ML in React Native](https://blog.swmansion.com/on-device-ai-ml-in-react-native-137918d0331b): This is fascinating stuff, which would’ve been inconceivable only a short while ago. Building real-time camera filters with on-device AI in RN.
 - 📜 [From web to native with React Native and Expo](https://expo.dev/blog/from-web-to-native-with-react-native-and-expo): Describes the journey of a web dev who built their first mobile app using RN/Expo.
