--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/190/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/190/index.mdx
@@ -7,14 +7,15 @@ date: 06-19-2024
 
 Salut à tous !
 
-I (Seb) am back, and happy to share that the newsletter crossed **40 000 subscribers**! 🎉
+Je (Seb) suis de retour, et heureux de vous annoncer que la newsletter a franchi le cap des **40 000 abonnés** ! 🎉
 
-Thanks for your support and for sharing the newsletter with your friends.\
-Any idea to make it even better, share feedback, or submit a link? Just reply to this email!
+Merci pour votre soutien et pour avoir partagé la newsletter avec vos amis.🎉
+Vous avez une idée pour l'améliorer, faire part de vos commentaires ou soumettre un lien ? Répondez simplement à cet email !
 
-This week the React 19 stable release that we expected very soon is delayed a bit due to a controversial change in how Suspense behaves.
+Cette semaine, la version stable de React 19 que nous attendions très prochainement est un peu retardée en raison d'un changement controversé dans le comportement de Suspense.
 
-On the React Native side, the first RC of 0.75 is expected very soon, running under React 19.
+Du côté de React Native, la première RC de la 0.75 est attendue très bientôt, fonctionnant sous React 19.
+*** Traduit avec www.DeepL.com/Translator (version gratuite) ***
 
 <!-- truncate -->
 
@@ -46,11 +47,11 @@ Graphite Grid is declarative and consistent, leveraging state signals to ensure 
 
 **[React 19 and Suspense - A Drama in 3 Acts](https://tkdodo.eu/blog/react-19-and-suspense-a-drama-in-3-acts)**
 
-React 19 RC.0 was released 2 weeks ago and could have become the React 19 stable release we've been waiting for. Unfortunately, it contains a controversial change to the Suspense behavior, leading the React team to talk and decide to delay the release until a solution is found.
+React 19 RC.0 a été publié il y a 2 semaines et aurait pu devenir la version stable de React 19 que nous attendions. Malheureusement, elle contient une modification controversée du comportement Suspense, ce qui a conduit l'équipe React à débattre et à décider de retarder la sortie de la version jusqu'à ce qu'une solution soit trouvée.
 
-Unlike React 18, in v19 if a component suspends, its siblings won't render anymore, leading to potential waterfalls. In many situations (using “fetch-on-render” pattern, using React.lazy()...), async code might run sequentially instead of in parallel. There’s a good reason motivating this change: the ability to display Suspense fallbacks sooner, and avoid rendering components uselessly. In theory, waterfalls could be avoided if requests were “hoisted” at the router level (using the “render-as-you-fetch” pattern), but many existing apps do not do that and would suffer from degraded performances.
+Contrairement à React 18, dans la v19, si un composant est suspendu, ses frères et sœurs ne seront plus rendus, ce qui peut entraîner des « waterfalls ». Dans de nombreuses situations (en utilisant le pattern « fetch-on-render », en utilisant React.lazy()...), le code asynchrone peut s'exécuter séquentiellement au lieu de s'exécuter en parallèle. Il y a une bonne raison qui motive ce changement : la possibilité d'afficher les fallbacks de Suspense plus tôt, et d'éviter de rendre des composants inutiles. En théorie, les waterfalls pourraient être évitées si les requêtes étaient « hoisted » au niveau du routeur (en utilisant le pattern « render-as-you-fetch »), mais de nombreuses applications existantes ne le font pas et souffriraient de performances dégradées.
 
-**Related resources**:
+**Ressources associées** :
 
 - 📜 [How React 19 (Almost) Made the Internet Slower](https://blog.codeminer42.com/how-react-19-almost-made-the-internet-slower/)
 - 🔗 [React 19 Issue - Disabling prerendering siblings of suspended components breaking common pattern](https://github.com/facebook/react/issues/29898)
@@ -63,29 +64,29 @@ Unlike React 18, in v19 if a component suspends, its siblings won't render anymo
 
 **[React Internals Explorer - easily see how React works](https://jser.dev/2024-05-11-introducing-rie/)**
 
-A new interactive playground to see how React works under the hood. It’s possible to explore internals step-by-step. You can even select the React version, and it’s particularly relevant for today’s issue because it can show the Suspense behavior difference between React 18 and React 19!
+Un nouveau terrain de jeu interactif pour voir comment React fonctionne sous le capot. Il est possible d'explorer les éléments internes étape par étape. Vous pouvez même sélectionner la version de React, et c'est particulièrement pertinent pour le sujet d'aujourd'hui car cela permet de montrer la différence de comportement de Suspense entre React 18 et React 19 !
 
 ---
 
 - 💸 [Meilisearch - Build search-as-you-type for React](https://www.meilisearch.com/with/react?utm_campaign=sponsoring&utm_content=june-19&utm_source=thisweekinreact)
-- 👀 [React Core PR - Badge Environment Name on Thrown Errors from the Server](https://github.com/facebook/react/pull/29846): A convenient DX improvement to know where the error comes from thanks to a [server] console badge.
+- 👀 [React Core PR - Badge Environment Name on Thrown Errors from the Server](https://github.com/facebook/react/pull/29846) : Une amélioration DX pratique permet de savoir d'où vient l'erreur grâce à un badge de la console [server].
 - 🐦 [React Router 7 - Ryan Florence Sneak Peek video](https://x.com/ryanflorence/status/1801388170891903252)
-- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 July - Get a 10% discount with code "TWIR". Tomasz Sapeta (Expo/Software Mansion), Carmen Huidobro (DevCraft Academy), and Atila Fassina (CrabNebula) will speak !
-- 🗓 [dotJS](https://www.dotjs.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - June 27 - Just 1 week left before the conference! 10% discount with code "TWIR"
-- 📜 [Codemod partnering with the React team](https://codemod.com/blog/react-announcement): The Codemod company is partnering with React to maintain the react-codemod repo and help us upgrade to React 19.
-- 📜 [Future of Astro series - Zero-JS view transitions, Astro Content Layer, and Server Islands](https://astro.build/blog/future-of-astro-zero-js-view-transitions/): Astro betting on new browser features like cross-document view transitions makes us question the need for client-side routing and SPAs. I hope they’ll figure out how to persist component state across navigation in this new mode. They also plan to improve their (CMS integration, composable, using LibSQL) and provide a new “server:defer” directive (similar to Suspense, but not using streaming).
-- 📜 [Demystifying INP: New tools and actionable insights](https://vercel.com/blog/demystifying-inp-new-tools-and-actionable-insights): Vercel CTO explains that the new Core Web Vital INP (Interaction to Next Paint) is a misleading metric. Surprisingly preloading data can even give you a lower INP score. Using a React example from the Next.js docs site (js/ts code block language picker), he explains that user input must be acknowledged within 200ms. He suggests using either his package “await-interaction-response” or React transitions to separate user input handling from rendering the meaningful result.
-- 📜 [Experimenting with React Server Components and Vite](https://danielnagy.me/posts/Post_usaivhdu3j5d): A quite advanced article recreating a RSC setup with Vite from scratch. Very useful resource for framework authors looking to support RSCs. All this work to run a blog for your cat Dan 😄.
-- 📜 [How to compose JavaScript functions that take multiple parameters](https://jrsinclair.com/articles/2024/how-to-compose-functions-that-take-multiple-parameters-epic-guide/): Shows how to use a compose() function with React useState, among other things that will interest functional programming enthusiasts.
-- 📜 [React Form with Loading State (Pending Action)](https://www.robinwieruch.de/react-form-loading-pending-action/): Shows 3 possible ways to can get the loading state of a form, using useActionState, useFormStatus and useTransition.
-- 📜 [Redwood “Love reloaded" - A DX Story](https://redwoodjs.com/blog/love-reloaded-a-dx-story): Redwood briefly explains the tradeoffs of 3 instant feedback mechanisms. For their RSC experience, they’ll start by shipping live reload, and plan to implement fast refresh later.
-- 📜 [Using React Query with Astro](https://hounie.me/writings/how-to-use-react-query-with-astro/): Using nanostores instead of React Context.
-- 📜 [Next.js Server Actions with next-safe-action](https://www.davegray.codes/posts/nextjs-server-actions-with-next-safe-action): The library handles typesafety and input validation (with zod).
+- 🗓️ [The Geek Conf](https://www.thegeekconf.com/?utm_source=thisweekinreact) - 🇩🇪 Berlin - 18 & 25 juillet - 10% de réduction avec le code « TWIR ». Tomasz Sapeta (Expo/Software Mansion), Carmen Huidobro (DevCraft Academy), et Atila Fassina (CrabNebula) interviendront !
+- 🗓 [dotJS](https://www.dotjs.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 27 juin - Plus qu'une semaine avant la conférence ! 10% de réduction avec le code « TWIR »
+- 📜 [Codemod partnering with the React team](https://codemod.com/blog/react-announcement) : La société Codemod s'associe à React pour maintenir le dépôt react-codemod et nous aider à passer à React 19.
+- 📜 [Future of Astro series - Zero-JS view transitions, Astro Content Layer, and Server Islands](https://astro.build/blog/future-of-astro-zero-js-view-transitions/) : Le fait qu'Astro parie sur de nouvelles fonctionnalités du navigateur, comme les transitions de vue entre documents, nous amène à nous interroger sur la nécessité du routage côté client et des SPA. J'espère qu'ils trouveront un moyen de conserver l'état des composants à travers la navigation dans ce nouveau mode. Ils prévoient également d'améliorer leurs fonctionnalités (intégration CMS, composable, utilisant LibSQL) et de fournir une nouvelle directive "server:defer" (similaire à Suspense, mais n'utilisant pas le streaming).
+- 📜 [Demystifying INP: New tools and actionable insights](https://vercel.com/blog/demystifying-inp-new-tools-and-actionable-insights) : Le directeur technique de Vercel explique que le nouveau Core Web Vital INP (Interaction to Next Paint) est une mesure trompeuse. De manière surprenante, le préchargement des données peut même vous donner un score INP plus bas. En utilisant un exemple React du site Next.js docs (Sélection du language du bloc de code js/ts), il explique que l'entrée de l'utilisateur doit être reconnue dans les 200 ms. Il suggère d'utiliser son package « await-interaction-response » ou les transitions React pour séparer le traitement des données de l'utilisateur du rendu du résultat significatif.
+- 📜 [Experimenting with React Server Components and Vite](https://danielnagy.me/posts/Post_usaivhdu3j5d) : Un article assez avancé recréant une configuration RSC avec Vite à partir de zéro. Une ressource très utile pour les auteurs de frameworks qui cherchent à prendre en charge les RSC. Tous ces efforts pour gérer un blog pour votre chat Dan 😄.
+- 📜 [How to compose JavaScript functions that take multiple parameters](https://jrsinclair.com/articles/2024/how-to-compose-functions-that-take-multiple-parameters-epic-guide/) : Montre comment utiliser une fonction compose() avec React useState, parmi d'autres choses qui intéresseront les amateurs de programmation fonctionnelle.
+- 📜 [React Form with Loading State (Pending Action)](https://www.robinwieruch.de/react-form-loading-pending-action/) : Montre 3 façons possibles d'obtenir l'état de chargement d'un formulaire, en utilisant useActionState, useFormStatus et useTransition.
+- 📜 [Redwood “Love reloaded" - A DX Story](https://redwoodjs.com/blog/love-reloaded-a-dx-story) : Redwood explique brièvement les compromis entre les trois mécanismes de rechargement à chaud. Pour leur expérience RSC, ils commenceront par livrer le live reload, et prévoient d'implémenter le fast refresh plus tard.
+- 📜 [Using React Query with Astro](https://hounie.me/writings/how-to-use-react-query-with-astro/) : Utilisation de nanostores au lieu de React Context.
+- 📜 [Next.js Server Actions with next-safe-action](https://www.davegray.codes/posts/nextjs-server-actions-with-next-safe-action) : La bibliothèque gère la sécurité des types et la validation des entrées (avec zod).
 - 📜 [Hybrid i18n with Next and Astro - 4-part series](https://www.ericburel.tech/blog/hybrid-i18n-next-astro-1)
 - 📜 [Write SOLID React Hooks](https://www.perssondennis.com/articles/write-solid-react-hooks)
 - 📜 [Full Stack Web Push API Guide - Add push notifications to Remix Indie Stack](https://www.bocoup.com/blog/full-stack-web-push-api-guide)
 - 📦 [React DevTools 5.3 - Dim StrictMode extra console logs, fixes and refactors](https://github.com/facebook/react/blob/main/packages/react-devtools/CHANGELOG.md#530)
-- 📦 [Vercel AI SDK 3.2](https://vercel.com/blog/introducing-vercel-ai-sdk-3-2): you can now build generative UI chatbots client-side with just useChat() and streamText in your React projects
+- 📦 [Vercel AI SDK 3.2](https://vercel.com/blog/introducing-vercel-ai-sdk-3-2) : vous pouvez maintenant construire des chatbots génératifs côté client avec seulement useChat() et streamText dans vos projets React
 - 📦 [Reassure 1.0 - Performance testing companion for React and React Native](https://github.com/callstack/reassure/releases/tag/reassure%401.0.0)
 - 📦 [Fumadocs 12 - Documentation framework for Next.js](https://fumadocs.vercel.app/blog/v12)
 - 📦 [react-distributed-components - Effortlessly compose client and server components](https://github.com/daniel-nagy/react-distributed-components)
