--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -17,7 +17,7 @@ Get in touch:
 - by email at [**sponsor@thisweekinreact.com**](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
 - or fill the [**contact form**](https://thisweekinreact.com/sponsor/form)
 
-Last updated: **April 2024**.
+Last updated: **July 2024**.
 
 ---
 
@@ -52,14 +52,10 @@ Last updated: **April 2024**.
     </>
   </li>
   <li>
-    <b>Localized</b>
-    <>: the newsletter is sent in 🇬🇧 English and 🇫🇷 French.</>
-  </li>
-  <li>
     <b>Readers at</b>
     <>
       {
-        ": Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe,Cloudflare, ByteDance, Figma, Uber..."
+        ": Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe, Cloudflare, ByteDance, Figma, Uber..."
       }
     </>
   </li>
@@ -90,7 +86,7 @@ The audience of our [weekly newsletter](/newsletter) is **qualitative and engage
 
 ### 📜 Content {#content}
 
-Our editorial line assumes our readers are:
+Our editorial line assumes readers are:
 
 - **React developers**: we cover the whole React ecosystem
 - **React-Native developers**: there's a dedicated section in the newsletter
@@ -123,7 +119,7 @@ We **filter content** heavily, and generally exclude:
 
 With **a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
 
-Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This newsletter website itself is built with Docusaurus!
+Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites, one of Meta's most successful open source project.
 
 </details>
 
@@ -133,8 +129,8 @@ Since 2020, he has been **working for Meta** as a freelancer. He is the **lead m
 
 <SponsoringTabsStats>
   <details>
-    <summary><b>Email provider screenshot</b>{" (February 2023)"}</summary>
-        <img alt="screenshot" src="https://user-images.githubusercontent.com/749374/223171660-1fe93f8a-e67d-48c1-94ad-d0c6a1afed29.png" />
+    <summary><b>Email provider screenshot</b>{" (April 2024)"}</summary>
+        <img alt="screenshot" src="/img/CK_TWIR_STATS.jpg" />
   </details>
   <details>
     <summary><b>About the open-rate </b> - an unreliable metric</summary>
@@ -166,15 +162,15 @@ The newsletter structure stays the same every week:
 <BrowserWindow url={lastIssueLink}>
 
 - 👋 Introduction
-- [**🥇 1st sponsor**](#sponsor-1st)
+- 🥇 [**1st sponsor**](#sponsor-1st)
 - ⚛️ React section:
   - 👀 Headlines
-  - [**⚡️Quick Link sponsor**](#sponsor-quick-link)
+  - ⚡ [**React Quick Link sponsor**](#sponsor-quick-link)
   - 🔗 Links
-- [**🥈 2nd sponsor**](#sponsor-2nd)
+- 🥈 [**2nd sponsor**](#sponsor-2nd)
 - 📱 React-Native section:
   - 👀 Headlines
-  - [**⚡️Quick Link sponsor**](#sponsor-quick-link)
+  - ⚡ [**React Native Quick Link sponsor**](#sponsor-quick-link)
   - 🔗 Links
 - 🔀 Other section
 - 🤭 Fun section
@@ -222,7 +218,7 @@ This placement appears in the middle of the newsletter, in between the React and
 
     **Placement constraints:**
     - **Title**: 55 characters max, 1 link
-    - **Body**: 600 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
+    - **Body**: 800 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
     - **Image**: horizontal banner - ideally 1200x600px
 
     <SecondaryAdExample />
@@ -235,7 +231,7 @@ This placement appears in the middle of the newsletter, in between the React and
 
 ### ⚡️ Quick Link {#sponsor-quick-link}
 
-Quick Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links.
+Quick Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links they are interested in.
 
 <details>
     <summary>Ad constraints and example</summary>
@@ -263,6 +259,8 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
 - promote a relevant **piece of content** such as a product tutorial blog post
 - improve your **SEO profile** with a new do-follow backlink
 - **remind** the audience of an already-promoted product and stay top-of-mind
+- get a **lower Cost-Per-Click**: favor number of clicks instead of brand awareness
+- drive traffic to your site for creating qualified retargeting look-alike audiences
 
 :::
 
@@ -320,7 +318,7 @@ Requested dates (dd/MM/yyyy):
 
 Additional information:
 - We are flexible for the dates: yes / no
-- List of competitors we do not want to advertise alongside in the same issue: Company1, Company2...
+- Competitors we do not want to advertise alongside in the same issue: Company1, Company2...
 
 Company details for invoicing:
 - Company Name: ACME Corp
@@ -341,7 +339,8 @@ We will send the ad copy before the 31/08/2022
 
 Once the order is complete:
 
-- you pay the invoice under 30 days before the publication date
+- you pay the invoice under 15 days, before the publication date
+- we give you access to our sponsor portal
 - you provide the ad copy at least one week before the issue date
 - we review and validate the ad copy
 - we include the ad in the newsletters 🎉
@@ -374,7 +373,7 @@ We will tell you if we think your ad is not a good fit.
 
 ## Past Sponsors
 
-**Previous sponsors include**: Clerk, Highlight, FrontendMaster, Axiom, Ably, Stream, Software Mansion, Storyblok, Retool, Sizzy, CoderPad, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Porkbun, UXPin, Cambly, Nylas, Indy, TechTree...
+**Previous sponsors include**: PostHog, Axiom, WorkOS, Clerk, Omlet, Highlight, FrontendMaster, Ably, AG Grid, Graphite Grid, NLUX, RevenueCat, Stream, PowerSync, Callstack, Software Mansion, Meilisearch, Storyblok, Retool, Sizzy, CoderPad, React-Bricks, Refine, Apryse, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, WithFrame, Meteor, Hashnode, Sunsama, Moropo, RemixTape, Storetasker, Porkbun, Tripetto, MightyMeld, UXPin, Cambly, Nylas, Indy, TechTree...
 
 ## FAQ
 
