--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/190/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/190/index.mdx
@@ -15,7 +15,6 @@ Vous avez une idée pour l'améliorer, faire part de vos commentaires ou soumett
 Cette semaine, la version stable de React 19 que nous attendions très prochainement est un peu retardée en raison d'un changement controversé dans le comportement de Suspense.
 
 Du côté de React Native, la première RC de la 0.75 est attendue très bientôt, fonctionnant sous React 19.
-*** Traduit avec www.DeepL.com/Translator (version gratuite) ***
 
 <!-- truncate -->
 
@@ -125,23 +124,23 @@ Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 ![](/emails/issues/190/rn.jpg)
 
-As there is no “big headline news” this week, I want to take the opportunity to celebrate two projects within the React Native community. The team behind React Native [visionOS received the React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121) in the category “Most Exciting Use of Technology,” and the team at Infinite Red released the [300th episode of the React Native Radio](https://reactnativeradio.com/episodes/rnr-300-special-episode-ask-us-anything) podcast this week. Congratulations to both teams and thank you for the work you all do for our community!
+Comme il n'y a pas de « grandes annonces » cette semaine, j'aimerais profiter de l'occasion pour mettre à l'honneur deux projets au sein de la communauté React Native. L'équipe de React Native [visionOS a reçu le React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121) dans la catégorie « Most Exciting Use of Technology », et l'équipe d'Infinite Red a publié cette semaine le [300e épisode du podcast React Native Radio](https://reactnativeradio.com/episodes/rnr-300-special-episode-ask-us-anything). Félicitations aux deux équipes et merci pour le travail que vous faites tous pour notre communauté !
 
 ---
 
 - 💸 [WithFrame - Pre-Built React Native Components](https://withfra.me/?utm_source=thisweekinreact&utm_medium=email&utm_campaign=quick-link--3)
-- 🐦 [React Native visionOS receives React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121): Congratulations!
+- 🐦 [React Native visionOS receives React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121) : Félicitations !
 - 🐦 [New React Native IDE beta with speed improvements](https://x.com/kzzzf/status/1801367065086816449)
 - 👀 [React Native 0.75 PRs - bump dependency to React 19](https://github.com/facebook/react-native/pull/44990)
-- 👀 [React Native PR - requestIdleCallback ](https://github.com/facebook/react-native/pull/44759): Schedule background and low-priority work on the main event loop.
-- 📖 [Expo Docs - React Compiler - Available from Expo SDK 51](https://docs.expo.dev/guides/react-compiler/): Still experimental, of course.
-- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - 🇺🇸 Portland, OR - July 17-19. The U.S. React Native Conference is back with engaging talks and hands-on workshops! Get 15% off your ticket with code “TWIR”
-- 📜 [Infinite Red maintains a list of the Top React Native Apps](https://shift.infinite.red/top-react-native-apps-1cae78fdee22): I didn’t know Burger King and Pizza Hut apps were built with RN. If you know of a great app that should be on that list, you can nominate it - even if it’s not a fast food chain!
-- 📜 [Reanimated Can Block Your JS Thread](https://andrei-calazans.com/posts/reanimated-blocking-js-thread/): Yes, you can shoot yourself in the foot when using shared values, this is a good reminder to evaluate whether a value needs to be a Shared Value.
-- 📜 [Testing Expo Web3 Apps With Wagmi and Anvil](https://www.callstack.com/blog/testing-expo-web3-apps-with-wagmi-and-anvil): Even if you’re like me and instantly fall asleep when you hear the word Web3 these days, this article is a good example walkthrough of different aspects of testing, including mocking.
-- 📜 [Baseball + React Native = Success](https://www.thewidlarzgroup.com/portfolio/flexpro-grip): I love seeing apps built with RN that are a bit unusual (and not just consist of lists of records). This is an example of such an app for the FlexPro Grip, a device that Baseball players use to train their grip.
+- 👀 [React Native PR - requestIdleCallback ](https://github.com/facebook/react-native/pull/44759) : Planifier les tâches d'arrière-plan et de faible priorité sur la boucle d'événement principale.
+- 📖 [Expo Docs - React Compiler - Available from Expo SDK 51](https://docs.expo.dev/guides/react-compiler/) : Toujours expérimental, bien sûr.
+- 🗓 [Chain React Conf](https://chainreactconf.com/?utm_source=thisweekinreact) - 🇺🇸 Portland, OR - Du 17 au 19 juillet. La conférence américaine React Native est de retour avec des conférences captivantes et des ateliers pratiques ! Bénéficiez de 15% de réduction sur votre billet avec le code « TWIR »
+- 📜 [Infinite Red maintains a list of the Top React Native Apps](https://shift.infinite.red/top-react-native-apps-1cae78fdee22) : Je ne savais pas que les applications Burger King et Pizza Hut étaient conçues avec RN. Si vous connaissez une application qui devrait figurer sur cette liste, vous pouvez la proposer - même s'il ne s'agit pas d'une chaîne de fast food !
+- 📜 [Reanimated Can Block Your JS Thread](https://andrei-calazans.com/posts/reanimated-blocking-js-thread/) : Oui, on peut se tirer une balle dans le pied en utilisant des valeurs partagées. Il s'agit d'un bon rappel pour évaluer si une valeur doit être une valeur partagée.
+- 📜 [Testing Expo Web3 Apps With Wagmi and Anvil](https://www.callstack.com/blog/testing-expo-web3-apps-with-wagmi-and-anvil) : Même si vous êtes comme moi et que vous vous assoupissez instantanément lorsque vous entendez le mot Web3 ces jours-ci, cet article est un bon exemple de démonstration des différents aspects des tests, y compris le mocking.
+- 📜 [Baseball + React Native = Success](https://www.thewidlarzgroup.com/portfolio/flexpro-grip) : J'aime voir des applications construites avec des IA qui sont un peu inhabituelles (et qui ne se limitent pas à des listes de records). Voici un exemple d'une telle application pour le FlexPro Grip, un appareil que les joueurs de baseball utilisent pour entraîner leur « grip » (prise).
 - 📜 [Bringing native AI to your mobile apps with ExecuTorch— part I — iOS](https://blog.swmansion.com/bringing-native-ai-to-your-mobile-apps-with-executorch-part-i-ios-f1562a4556e8)
-- 📦 [react-navigation-bottom-sheet](https://github.com/th3rdwave/react-navigation-bottom-sheet): I’m a big fan of @gorhom/bottom-sheet, this new library integrates it with React Navigation.
+- 📦 [react-navigation-bottom-sheet](https://github.com/th3rdwave/react-navigation-bottom-sheet) : Je suis un grand fan de @gorhom/bottom-sheet, cette nouvelle bibliothèque l'intègre dans React Navigation.
 - 📦 [react-native-screens 3.32.0 - Back button display mode on iOS, navigationBarTranslucent prop on Android](https://github.com/software-mansion/react-native-screens/releases/tag/3.32.0)
 - 📦 [react-native-config 1.5.2 adds visionOS support](https://github.com/lugg/react-native-config/releases/tag/v1.5.2)
 - 📦 [react-native-gesture-handler 2.17.0](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.17.0)
@@ -149,7 +148,7 @@ As there is no “big headline news” this week, I want to take the opportunity
 - 🎙️ [Rocket Ship 43 - React Native Best Practices Template with Youssouf El Azizi](https://share.transistor.fm/s/cc24a442)
 - 🎥 [notJust․dev - Building an e-Scooter App with React Native and Mapbox](https://www.youtube.com/live/uxj8jnlooP8)
 - 🎥 [Simon Grimm - 5 React Native Tips to Wow Your Users](https://www.youtube.com/watch?v=pZgjlh5ezd4)
-- 🎥 [Baptiste Devessier - XState at Expo](https://www.youtube.com/watch?v=HuXnUGfHKZs): TIL that Expo Updates uses XState.
+- 🎥 [Baptiste Devessier - XState at Expo](https://www.youtube.com/watch?v=HuXnUGfHKZs) : J'ai appris aujourd'hui qu'Expo Updates utilise XState.
 
 ---
 
